# 42SH

./: CMakeLists.txt  Makefile  README.md
src/builtins/: break.c  builtins.h  cd.c  continue.c  dot.c  echo.c  exit.c  export.c  true_false.c  unset.c
src/interpreter/: environment.c  environment.h  function_list.c  function_list.h  interpreter.c  interpreter.h  redirections.c  redirections.h  variable_list.c  variable_list.h
src/lexer/: cursor.c  cursor.h  lexer.c  lexer.h  lexer_utils.c  lexer_utils.h  lexer_utils_2.c  token.c  token.h  token_2.c  token_3.c  token_4.c  token_5.c  token_getters.c
src/main/: 42sh.h  main.c  utils.c  utils.h
src/parser/: ast.h  ast_add_funcs.c  ast_add_funcs_2.c  ast_copy.c  ast_copy.h  ast_frees.c  ast_inits.c  ast_prints.c  parser.c  parser.h  utils.c  utils.h
tests/: test_all.py  test_builtins_echo.py  test_builtins_true_false.py  test_builtins_unset.py  test_cd.py  test_command_lists.py  test_comments.py  test_double_quotes.py  test_exit.py  test_export.py  test_for_loops.py  test_if_commands.py  test_main.py  test_pipelines.py  test_pipelines_negation.py  test_redirections.py  test_single_quote.py  test_variable.py  tester.py
tests/test_scripts/: case01.sh  case02.sh  fun01.sh  fun02.sh  fun03.sh  input.sh  input2.sh  many_vars.sh  test01.sh  test03.sh  test04.sh  test05.sh  test08.sh  test13.sh  test14.sh  test16.sh  test_basic_quotes.sh  test_break1_forwhile.sh  test_break2_forfor.sh  test_break2_forwhile.sh  test_break_for.sh  test_break_until.sh  test_continue_for.sh  test_continue_n_for.sh  test_exit.sh  (+1 more)
(+1 files in other folders)
